tests/pos/i1642.scala
class Test1(val x: Int) extends AnyVal
class Test2(val y: Test1) extends AnyVal
